generator client {
  provider      = "prisma-client-js"
  output        = "../generated/prisma"
  binaryTargets = ["native", "linux-musl-arm64-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id          String           @id @default(cuid())
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  email       String           @unique
  firstName   String
  lastName    String
  password    String?
  status      String           @default("ACTIVE")
  role        ROLE             @default(WORKER)
  companyId   String?
  company     Company?         @relation(fields: [companyId], references: [id], onDelete: Cascade)
  assignments SiteAssignment[]
}

model Company {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  name      String
  address   Address  @relation(fields: [addressId], references: [id], onDelete: Cascade)
  users     User[]
  sites     Site[]
  addressId String
}

model Address {
  id            String    @id @default(cuid())
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  company       Company[]
  site          Site[]
  streetNumber  String
  street        String
  city          String
  country       String
  postalCode    String
  googlePlaceId String?
}

model Site {
  id          String           @id @default(cuid())
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  name        String
  priority    String?
  address     Address          @relation(fields: [addressId], references: [id], onDelete: Cascade)
  companyId   String
  company     Company          @relation(fields: [companyId], references: [id], onDelete: Cascade)
  assignments SiteAssignment[]
  addressId   String
  material    Material[]
  startDate   DateTime?
  endDate     DateTime?
  notes       String?
  status      SITE_STATUS      @default(ACTIVE)
}

model Material {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  name      String
  unit      String
  amount    Int
  threshold Int
  siteId    String
  site      Site     @relation(fields: [siteId], references: [id], onDelete: Cascade)
}

model SiteAssignment {
  id          String    @id @default(cuid())
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId      String
  site        Site      @relation(fields: [siteId], references: [id], onDelete: Cascade)
  siteId      String
  lastVisited DateTime?

  @@unique([userId, siteId])
}

enum ROLE {
  ADMIN
  MANAGER
  WORKER
}

enum SITE_STATUS {
  ACTIVE
  INACTIVE
}
